Antes de agregar la tabla user_profiles